feat(analytics): add Vercel Analytics integration
- Track page views and user interactions
- Privacy-first analytics (no cookies)
- Integrates with Vercel dashboard
- Bump version to 0.2.4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baustein",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
+    "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.559.0",
