--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@
 
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+# Site Configuration (for SEO and metadata)
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+# Production: NEXT_PUBLIC_SITE_URL=https://yourdomain.com
