feat: add device synchronization and improve UI (v0.5.0)
- Device sync: QR code and 6-digit pairing codes for cross-device session transfer
- Enhanced word form: collapsible details, color-coded artikel selection
- Settings page: device pairing section and data reset with confirmation
- Fixed Zod validation error handling (deprecated methods replaced)
- Added react-qr-code dependency
- Database: session_transfers table for secure token storage

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
 # Site Configuration (for SEO and metadata)
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 # Production: NEXT_PUBLIC_SITE_URL=https://yourdomain.com
+
+GOOGLE_GENERATIVE_AI_API_KEY=your-google-generative-ai-api-key-here
